// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SiteFooter renders correctly with no social links 1`] = `
.c6 #wcb_2 {
  display: none!important;
}

.c1 {
  display: grid;
  position: relative;
  min-height: auto;
  width: 100%;
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  column-gap: calc(24px);
}

.c1 >* {
  grid-column: 2/auto;
}

.c2 {
  display: flex;
}

.c4 {
  display: flex;
  gap: 1.5rem;
  justify-content: center;
  flex-wrap: wrap;
}

.c7 {
  color: #a0a0b0;
  font-size: 0.875rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c0 {
  border-top: 1px solid rgba(255, 255, 255, 0.08);
  padding-top: 3rem;
  padding-bottom: 2rem;
}

.c3 {
  flex-direction: column;
  align-items: center;
  gap: 1.5rem;
}

.c5 {
  display: flex;
  justify-content: center;
}

@media (min-width: 600px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
    column-gap: calc(24px);
  }
}

@media (min-width: 900px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
    column-gap: calc(36px);
  }
}

@media (min-width: 1200px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
    column-gap: calc(81px);
  }
}

@media (min-width: 1536px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
    column-gap: calc(121.5px);
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

<div>
  <footer
    class="c0"
    role="contentinfo"
  >
    <section
      class="c1"
    >
      <div
        class="c2 c3"
      >
        <div
          class="c4"
        />
        <div
          class="c5"
        >
          <div
            class="c6"
          >
            <div
              class="carbonbadge wcb-d "
              id="wcb"
            />
          </div>
        </div>
        <p
          class="c7"
          style="text-align: center;"
        >
          © 
          2026
           
          Andrea Agostini
        </p>
      </div>
    </section>
  </footer>
</div>
`;

exports[`SiteFooter renders correctly with social links 1`] = `
.c10 #wcb_2 {
  display: none!important;
}

.c1 {
  display: grid;
  position: relative;
  min-height: auto;
  width: 100%;
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  column-gap: calc(24px);
}

.c1 >* {
  grid-column: 2/auto;
}

.c2 {
  display: flex;
}

.c4 {
  display: flex;
  gap: 1.5rem;
  justify-content: center;
  flex-wrap: wrap;
}

.c5 {
  color: #3b82f6;
  text-decoration: none;
  font-size: 1rem;
  line-height: 1;
  transition: color 0.2s ease-in-out;
}

.c5:hover {
  color: #3b82f6;
}

.c5:focus-visible {
  outline: 2px solid #3b82f6;
  outline-offset: 2px;
}

.c7 {
  color: #a0a0b0;
  font-size: 1rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c11 {
  color: #a0a0b0;
  font-size: 0.875rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c0 {
  border-top: 1px solid rgba(255, 255, 255, 0.08);
  padding-top: 3rem;
  padding-bottom: 2rem;
}

.c3 {
  flex-direction: column;
  align-items: center;
  gap: 1.5rem;
}

.c6 {
  font-weight: 700;
  color: #3b82f6;
}

.c8 {
  text-align: center;
  font-size: 0.875rem;
  color: #a0a0b0;
}

.c9 {
  display: flex;
  justify-content: center;
}

@media (min-width: 600px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
    column-gap: calc(24px);
  }
}

@media (min-width: 900px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
    column-gap: calc(36px);
  }
}

@media (min-width: 1200px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
    column-gap: calc(81px);
  }
}

@media (min-width: 1536px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
    column-gap: calc(121.5px);
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

<div>
  <footer
    class="c0"
    role="contentinfo"
  >
    <section
      class="c1"
    >
      <div
        class="c2 c3"
      >
        <div
          class="c4"
        >
          <a
            aria-label="LinkedIn"
            class="c5 c6"
            href="https://linkedin.com/in/agostiniandrea"
            rel="noopener noreferrer"
            target="_blank"
          >
            LinkedIn
          </a>
          <a
            aria-label="GitHub"
            class="c5 c6"
            href="https://github.com/agostiniandrea"
            rel="noopener noreferrer"
            target="_blank"
          >
            GitHub
          </a>
        </div>
        <p
          class="c7 c8"
        >
          Building for the web, one component at a time. Based in Bangkok.
        </p>
        <div
          class="c9"
        >
          <div
            class="c10"
          >
            <div
              class="carbonbadge wcb-d "
              id="wcb"
            />
          </div>
        </div>
        <p
          class="c11"
          style="text-align: center;"
        >
          © 
          2026
           
          Andrea Agostini
        </p>
      </div>
    </section>
  </footer>
</div>
`;
